fix: toast behind login ui

--- a/frontend-tsc/src/index.css
+++ b/frontend-tsc/src/index.css
@@ -15,5 +15,6 @@
 
 
 .swal2-container {
-  z-index: 1000000;
+  z-index: 1000000 !important;
+  position: absolute;
 }
